--- a/templates/post_by_tag.html
+++ b/templates/post_by_tag.html
@@ -10,7 +10,7 @@
 
     <a href="/" class="link">Назад</a>
 
-    <h1>Посты по тегу “Еда”</h1>
+    <h1>Посты по тегу {{ tag }}</h1>
 
     <div class="post">
         {% for post in posts %}
@@ -21,7 +21,7 @@
 
     <hr>
 
-    <a href="post_form.html" class="button">Добавить пост</a>
+    <a href="/post" class="button">Добавить пост</a>
 
 </main>
 </body>
